# nasa-pushback-federated-learning

./: Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
models/: centralized_linear_regression_benchmark.skops  federated_weights.npz
src/: config.py
src/models/linear_regression_benchmark/: README.md  utils.py
src/models/linear_regression_benchmark/centralized/: inference.py  train.py
src/models/linear_regression_benchmark/federated/: predict.py  train.py  utils.py
